# netbox-yandexcloud-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/plans/: 20260225-fix-sync-errors.md
docs/plans/completed/: 20260225-fix-sync-errors.md  fix-primary-ip-batch-new-vm.md
src/netbox_sync/: __main__.py  cli.py  config.py
src/netbox_sync/clients/: __init__.py  netbox.py  yandex.py
src/netbox_sync/ip/: __init__.py  classifier.py  utils.py
src/netbox_sync/sync/: __init__.py  batch.py  cleanup.py  engine.py  infrastructure.py  vms.py
tests/: conftest.py  test_cli.py  test_config.py  test_package.py
tests/clients/: test_netbox.py  test_yandex.py
tests/ip/: test_classifier.py  test_utils.py
tests/sync/: test_batch.py  test_cleanup.py  test_engine.py  test_infrastructure.py  test_vms.py
